test/libsolidity/syntaxTests/types/address/literal_to_payable_address_err.sol
contract C {
    function f() public pure {
        address payable a = address(0);
    }
}
// ----
// TypeError 9574: (52-82): Type address is not implicitly convertible to expected type address payable.
